--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,18 @@
         <h1>Portfolio</h1>
 
         <div class="photo">
-          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman" />
+          <img src="./assets/images/technics-q-c-640-480-1.jpg" alt="hangman" />
 
           <h3>Hangman</h3>
         </div>
         <div class="photo">
-          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" />
+          <img src="./assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" />
 
           <h3>RPG Game</h3>
         </div>
         <div class="photo">
           <img
-            src="assets/images/technics-q-c-640-480-5.jpg"
+            src="./assets/images/technics-q-c-640-480-5.jpg"
             alt="Trivia Game"
           />
 
@@ -44,7 +44,7 @@
         </div>
         <div class="photo">
           <img
-            src="assets/images/technics-q-c-640-480-7.jpg"
+            src="./assets/images/technics-q-c-640-480-7.jpg"
             alt="Rutgers Info Widget"
           />
 
@@ -52,7 +52,7 @@
         </div>
         <div class="photo">
           <img
-            src="assets/images/technics-q-c-640-480-9.jpg"
+            src="./assets/images/technics-q-c-640-480-9.jpg"
             alt="Rock Paper Scissors"
           />
 
@@ -67,19 +67,19 @@
           <div>
             <a href=""
               ><img
-                src="/assets/images/github-128.png"
+                src="./assets/images/github-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/linkedin-128.png"
+                src="./assets/images/linkedin-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/stackoverflow-128.png"
+                src="./assets/images/stackoverflow-128.png"
                 class="social-icons"
                 alt=""
             /></a>
