--- a/contact.html
+++ b/contact.html
@@ -21,56 +21,60 @@
       </div>
     </header>
 
-    <div class="section">
-      <form action="">
-        <label for="name">Name</label><br />
-        <input
-          type="text"
-          id="name"
-          name="name"
-          placeholder="Name and Surname"
-        /><br /><br />
-        <label for="email">Email</label><br />
-        <input
-          type="text"
-          id="mail"
-          name="mail"
-          placeholder="example@example.com"
-        /><br /><br />
-        <label for="message">Message</label><br />
-        <textarea id="message" name="message" required="required"></textarea
-        ><br /><br />
+    <main class="section">
+      <section class="section-inside">
+        <form action="">
+          <label for="name">Name</label><br />
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Name and Surname"
+          /><br /><br />
+          <label for="email">Email</label><br />
+          <input
+            type="text"
+            id="mail"
+            name="mail"
+            placeholder="example@example.com"
+          /><br /><br />
+          <label for="message">Message</label><br />
+          <textarea id="message" name="message" required="required"></textarea
+          ><br /><br />
 
-        <input id="button" type="submit" value="Submit" />
-      </form>
+          <input id="button" type="submit" value="Submit" />
+        </form>
 
-      <div class="side-container">
+
+      </section>
+
+
         <section class="side">
           <h1>Connect with me</h1>
 
           <div>
             <a href=""
               ><img
-                src="/assets/images/github-128.png"
+                src="./assets/images/github-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/linkedin-128.png"
+                src="./assets/images/linkedin-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/stackoverflow-128.png"
+                src="./assets/images/stackoverflow-128.png"
                 class="social-icons"
                 alt=""
             /></a>
           </div>
         </section>
-      </div>
-    </div>
+
+      </main>
 
     <footer>
       <div>
