--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
           <div>
             <a href=""
               ><img
-                src="/assets/images/github-128.png"
+                src="./assets/images/github-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/linkedin-128.png"
+                src=".assets/images/linkedin-128.png"
                 class="social-icons"
                 alt=""
             /></a>
             <a href=""
               ><img
-                src="/assets/images/stackoverflow-128.png"
+                src="./assets/images/stackoverflow-128.png"
                 class="social-icons"
                 alt=""
             /></a>
