--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <section class="side">
           <h1>Connect with me</h1>
 
-          <div>
+          <div class="social-img">
             <a href=""
               ><img
                 src="./assets/images/github-128.png"
