--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="side">
           <h1>Connect with me</h1>
 
-          <div>
+          <div class="social-img">
             <a href=""
               ><img
                 src="./assets/images/github-128.png"
@@ -53,7 +53,7 @@
             /></a>
             <a href=""
               ><img
-                src=".assets/images/linkedin-128.png"
+                src="./assets/images/linkedin-128.png"
                 class="social-icons"
                 alt=""
             /></a>
