--- a/contact.html
+++ b/contact.html
@@ -6,24 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/connect.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
 
     <title>About | Kanan Samandarli</title>
   </head>
   <body>
     <header class="head-name">
-      <div class="container">
-        <a href="index.html" class="logo">Kanan</a>
-        <nav>
+      <div class="logo-container">
+        <a href="index.html"><h1>Kanan</h1></a>
+      </div>
+        <nav class="nav">
           <a href="index.html">About</a>
           <a href="portfolio.html">Portfolio</a>
           <a href="contact.html">Contact</a>
         </nav>
-      </div>
+      
     </header>
 
     <main class="section">
       <section class="section-inside">
-        <form action="">
+        <h1>Contact</h1>
+        <form class="contact-form">
           <label for="name">Name</label><br />
           <input
             type="text"
